Prevent overflow on keyboard keys

--- a/src/ui/keyboard.scss
+++ b/src/ui/keyboard.scss
@@ -20,7 +20,7 @@
 				background-color: #EEE;
 
 				text-align: center;
-
+				overflow: hidden;
 				font-size: 20px;
 
 				&.held {
